syntax = "proto3";


import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package space;

option go_package = ".;pb";

//See here for more info about the google.api.http spec: https://github.com/googleapis/googleapis/blob/master/google/api/http.proto#L46

// SpaceApi service
service SpaceApi {
  // Get all folder or files in the default bucket. It fetches all subdirectories too.
  rpc ListDirectories(ListDirectoriesRequest) returns (ListDirectoriesResponse) {
    option (google.api.http) = {
      get: "/v1/directories/all"
    };
  }

  // Get the folder or files in the path directory.
  // Unlike ListDirectories, this only returns immediate children at path.
  rpc ListDirectory(ListDirectoryRequest) returns (ListDirectoryResponse) {
    option (google.api.http) = {
      get: "/v1/directories"
    };
  }

  // Get Config information installed daemon
  rpc GetConfigInfo(google.protobuf.Empty) returns (ConfigInfoResponse) {
    option (google.api.http) = {
      get: "/v1/configs"
    };
  }

  // Generate Key Pair for current account.
  // This will return error if daemon account already has keypairs
  rpc GenerateKeyPair(GenerateKeyPairRequest) returns (GenerateKeyPairResponse) {
    option (google.api.http) = {
      post: "/v1/keypairs/generate"
      body: "*"
    };
  }

  // Force Generation of KeyPair. This will override existing keys stored in daemon.
  rpc GenerateKeyPairWithForce(GenerateKeyPairRequest) returns (GenerateKeyPairResponse) {
    option (google.api.http) = {
      post: "/v1/keypairs/forceGenerate"
      body: "*"
    };
  }

  // Subscribe to file events. This streams responses to the caller
  rpc Subscribe(google.protobuf.Empty) returns (stream FileEventResponse) {
    option (google.api.http) = {
      get: "/v1/subscriptions/file"
    };
  }

  // Subscribe to textile events. This streams responses to the caller
  rpc TxlSubscribe(google.protobuf.Empty) returns (stream TextileEventResponse) {
    option (google.api.http) = {
      get: "/v1/subscriptions/textile"
    };
  }

  // Open a file in the daemon.
  // Daemon keeps track of all open files and closes them if no activity is noticed after a while
  rpc OpenFile(OpenFileRequest) returns (OpenFileResponse) {
    option (google.api.http) = {
      post: "/v1/files/open"
      body: "*"
    };
  }

  // Open an encrypted public shared file in the daemon.
  // This requires the decryption key and file hash/cid to work
  rpc OpenPublicSharedFile(OpenSharedFileRequest) returns (OpenSharedFileResponse) {
    option (google.api.http) = {
      get: "/v1/files/openPublic"
    };
  }

  // Adds items (files/folders) to be uploaded to the bucket.
  rpc AddItems(AddItemsRequest) returns (stream AddItemsResponse) {
    option (google.api.http) = {
      post: "/v1/files"
      body: "*"
    };
  }

  // Creates a folder/directory at the specified path
  rpc CreateFolder(CreateFolderRequest) returns (CreateFolderResponse) {
    option (google.api.http) = {
      post: "/v1/directories"
      body: "*"
    };
  }

  // Toggle FUSE drive to be mounted or unmounted
  rpc ToggleFuseDrive(ToggleFuseRequest) returns (FuseDriveResponse) {
    option (google.api.http) = {
      post: "/v1/fuse"
      body: "*"
    };
  }

  // Get status of FUSE drive. If mounted or unmounted
  rpc GetFuseDriveStatus(google.protobuf.Empty) returns (FuseDriveResponse) {
    option (google.api.http) = {
      get: "/v1/fuse"
    };
  }

  // Create a new bucket owned by current user (aka keypair)
  rpc CreateBucket(CreateBucketRequest) returns (CreateBucketResponse) {
    option (google.api.http) = {
      post: "/v1/buckets"
      body: "*"
    };
  }

  // Get Identity by Username
  rpc GetIdentityByUsername(GetIdentityByUsernameRequest) returns (GetIdentityByUsernameResponse) {
    option (google.api.http) = {
      get: "/v1/identities/{username}"
    };
  }

  // Create a new user identity. Username and Email required.
  rpc CreateUsernameAndEmail(CreateUsernameAndEmailRequest) returns (CreateUsernameAndEmailResponse) {
    option (google.api.http) = {
      post: "/v1/identities"
      body: "*"
    };
  }

  // Backup Key by Passphrase
  rpc BackupKeysByPassphrase(BackupKeysByPassphraseRequest) returns (BackupKeysByPassphraseResponse) {
    option (google.api.http) = {
      post: "/v1/passphrases/backup"
      body: "*"
    };
  }

  // Recover Keys by Passphrase
  rpc RecoverKeysByPassphrase(RecoverKeysByPassphraseRequest) returns (RecoverKeysByPassphraseResponse) {
    option (google.api.http) = {
      post: "/v1/passphrases/recover"
      body: "*"
    };
  }

  // Share bucket
  rpc ShareBucket(ShareBucketRequest) returns (ShareBucketResponse) {
    option (google.api.http) = {
      post: "/v1/buckets/{bucket}/share"
      body: "*"
    };
  }

  // Join bucket
  rpc JoinBucket(JoinBucketRequest) returns (JoinBucketResponse) {
    option (google.api.http) = {
      post: "/v1/buckets/{bucket}/join"
      body: "*"
    };
  }

  // Share bucket via email
  rpc ShareBucketViaEmail(ShareBucketViaEmailRequest) returns (ShareBucketViaEmailResponse) {
    option (google.api.http) = {
      post: "/v1/buckets/{bucket}/shareViaEmail"
      body: "*"
    };
  }

  // Share bucket via identity information
  rpc ShareBucketViaIdentity(ShareBucketViaIdentityRequest) returns (ShareBucketViaIdentityResponse) {
    option (google.api.http) = {
      post: "/v1/buckets/{bucket}/shareViaIdentity"
      body: "*"
    };
  }

  // Generate sharing link for file in bucket
  rpc GenerateFileShareLink(GenerateFileShareLinkRequest) returns (GenerateFileShareLinkResponse) {
    option (google.api.http) = {
      post: "/v1/buckets/{bucket}/generateFileShareLink"
      body: "*"
    };
  }

  rpc ListBuckets(ListBucketsRequest) returns (ListBucketsResponse) {
    option (google.api.http) = {
      get: "/v1/buckets"
    };
  }

  rpc ShareItemsToSelectGroup(ShareItemsToSelectGroupRequest) returns (ShareItemsToSelectGroupResponse) {
    option (google.api.http) = {
      post: "/v1/items/shareToGroup"
      body: "*"
    };
  }
}

message ListDirectoriesRequest {
  string bucket = 1;
}

message ListDirectoryEntry {
  string path = 1;
  bool isDir = 2;
  string name = 3;
  string sizeInBytes = 4;
  string created = 5;
  string updated = 6;
  string fileExtension = 7;
  string ipfsHash = 8;
}


message ListDirectoriesResponse {
  repeated ListDirectoryEntry entries = 1;
}

message ListDirectoryRequest {
  string path = 1;
  string bucket = 2;
}

message ListDirectoryResponse {
  repeated ListDirectoryEntry entries = 1;
}

message ConfigInfoResponse {
  string port = 1;
  string appPath = 2;
}

message CreateBucketRequest {
  string slug = 1;
}

message BucketMember {
  // Might be blank while the invite is not accepted.
  string address = 1;
  // Might be blank while the invite is not accepted.
  string publicKey = 2;
  bool isOwner = 3;
  // Might be blank while the invite is not accepted.
  string username = 4;
  // Optional. Might be blank.
  string email = 5;
}

message Bucket {
  string key = 1;
  string name = 2;
  string path = 3;
  int64 createdAt = 4;
  int64 updatedAt = 5;
  repeated BucketMember members = 6;
  bool isSelectGroupBucket = 7;
}

message CreateBucketResponse {
  Bucket bucket = 1;
}

message GenerateKeyPairRequest {}

message GenerateKeyPairResponse {
  string publicKey = 1;
  string privateKey = 2;
}

enum EventType {
  ENTRY_ADDED = 0;
  ENTRY_DELETED = 1;
  ENTRY_UPDATED = 2;
}

message FileEventResponse {
  EventType type = 1;
  ListDirectoryEntry entry = 2;
}

message TextileEventResponse {
  string bucket = 1;
}

message OpenFileRequest {
  string path = 1;
  string bucket = 2;
}

message OpenFileResponse {
  string location = 1;
}

message OpenSharedFileRequest {
  string fileCid = 1;
  string fileKey = 2;
  string filename = 3;
}

message OpenSharedFileResponse {
  string location = 1;
}

message AddItemsRequest {
  // full paths to file or Folder on FS. Needs to be a location available to the daemon
  repeated string sourcePaths = 1;
  // target path in bucket.
  string targetPath = 2;
  // The bucket in which to save the item
  string bucket = 3;
}

message AddItemResult {
  string sourcePath= 1;
  string bucketPath = 2;
  string error = 3;
}

message AddItemsResponse {
  AddItemResult result = 1;
  int64 totalFiles = 2;
  int64 totalBytes = 3;
  int64 completedFiles = 4;
  int64 completedBytes = 5;
}

message CreateFolderRequest {
  // target path in bucket to add new empty folder
  string path = 1;
  // The bucket in which to add the folder
  string bucket = 2;
}
// not sure we need to return anything other than an error if we failed
message CreateFolderResponse {
}

message GetIdentityByUsernameRequest {
  string username = 1;
}

message Identity {
  string address = 1;
  string publicKey = 2;
  string username = 3;
}

message GetIdentityByUsernameResponse {
  Identity identity = 1;
}

message CreateUsernameAndEmailRequest {
  string username = 1;
  // Optional. Send "" to skip.
  string email = 2;
}

message CreateUsernameAndEmailResponse {}

message BackupKeysByPassphraseRequest {
  string passphrase = 1;
}

message BackupKeysByPassphraseResponse {}

message RecoverKeysByPassphraseRequest {
  string passphrase = 1;
}

message RecoverKeysByPassphraseResponse {}

message ThreadInfo {
  repeated string addresses = 1;
  string key = 2;
}

message ShareBucketRequest {
  string bucket = 1;
}

message ShareBucketResponse {
  ThreadInfo threadinfo = 1;
}

message JoinBucketRequest {
  ThreadInfo threadinfo = 1;
  string bucket = 2;
  string invitationID = 3;
}

message JoinBucketResponse {
  bool result = 1;
}

message ShareBucketViaEmailRequest {
  string bucket = 1;
  string email = 2;
}

message ShareBucketViaEmailResponse {}

enum IdentityType {
  USERNAME = 0;
  EMAIL = 1;
}

message ShareBucketViaIdentityRequest {
  // identityType is either USERNAME or EMAIL
  IdentityType identityType = 1;
  // E.g. if identityType is USERNAME, identityValue is the actual username
  string identityValue = 2;
  string bucket = 3;
}

message ShareBucketViaIdentityResponse {}

message GenerateFileShareLinkRequest {
  string bucket = 1;
  string filePath = 2;
}

message GenerateFileShareLinkResponse {
  string link = 1;
  string fileCid = 2;
  string fileKey = 3;
}

message ToggleFuseRequest {
  bool mountDrive = 1;
}

message FuseDriveResponse {
  bool fuseDriveMounted = 1;
}

message ListBucketsRequest {}

message ListBucketsResponse {
  repeated Bucket buckets = 1;
}

enum InvitationType {
  INVITE_THROUGH_EMAIL = 0;
  INVITE_THROUGH_ADDRESS = 1;
}

message Invitation {
  // If inviting a user that might or might not have Space installed, use INVITE_THROUGH_EMAIL. If you want to invite via a known identity, use INVITE_THROUGH_ADDRESS instead
  InvitationType invitationType = 1;
  // Either the email if using INVITE_THROUGH_EMAIL, or the address (derivation from public key) if using INVITE_THROUGH_ADDRESS
  string invitationValue = 2;
}

message ShareItemsToSelectGroupRequest {
  string bucket = 1;
  repeated string itemPaths = 2;
  repeated Invitation invitations = 3;
  string customMessage = 4;
}

message ShareItemsToSelectGroupResponse {}